--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   color: azure;
   margin-top: 120px;
   font-size: 24px;
+  font-family: "Roboto", sans-serif;
 }
 
 .user {
@@ -46,6 +47,7 @@ body {
   background-position: 10px center;
   text-indent: 30px;
   font-size: larger;
+  font-family: "Open Sans", sans-serif;
 }
 
 .pass {
@@ -62,11 +64,12 @@ body {
   background-position: 10px center;
   text-indent: 30px;
   font-size: larger;
+  font-family: "Open Sans", sans-serif;
 }
 
 .login-button {
-  width: 180px;
-  height: 180px;
+  width: 170px;
+  height: 170px;
   padding: 10px;
   margin-top: 20px;
   border: none;
@@ -76,9 +79,10 @@ body {
   font-size: 25px;
   cursor: pointer;
   position: absolute;
-  bottom: 100px;
+  bottom: 90px;
   right: 500px;
   z-index: 10;
+  font-family: "Montserrat", sans-serif;
 }
 
 .login-button:hover {
